# Snake

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  snake_icon.icns
include/: constants.h  gamepanel.h  snakeelement.h  snakewidget.h
src/: gamepanel.cpp  main.cpp  snakewidget.cpp
